# netcrawler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  products_xpath.json
include/: CSV.hpp  Crawler.hpp  HtmlParser.hpp  HttpClient.hpp  HttpsClient.hpp  ProductRepository.hpp  ProductXPathConfig.hpp  Utils.hpp
src/: CSV.cpp  Crawler.cpp  HtmlParser.cpp  HttpClient.cpp  HttpsClient.cpp  ProductXPathConfig.cpp  Utils.cpp
